kubernetes/apps/talos1018/home-automation/esphome/app/deployment.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: esphome
  template:
    metadata:
      labels:
        app.kubernetes.io/name: esphome
      annotations:
        k8s.v1.cni.cncf.io/networks: network/multus-macvlan2, network/multus-macvlan3
    spec:
      containers:
        - name: esphome
          image: "ghcr.io/esphome/esphome:2026.9.0"
          imagePullPolicy: IfNotPresent
          command: ["esphome-device-builder"]
          args: ["--host", "::", "/config"]
          ports:
            - name: http
              containerPort: 6052
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: data
            - mountPath: /cache
              name: cache
            - mountPath: /config/.esphome
              name: build-cache
            - name: esphome-secret
              mountPath: /config/secrets.yaml
              subPath: secrets.yaml
            - name: font
              mountPath: /config/fonts/MatrixLight8X.ttf
              subPath: MatrixLight8X.ttf
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "0.02"
              memory: "50Mi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: esphome-data
        - name: cache
          emptyDir:
            sizeLimit: 5Gi
        - name: build-cache
          emptyDir:
            sizeLimit: 5Gi
        - name: esphome-secret
          secret:
            secretName: esphome-secret
        - name: font
          configMap:
            name: esphome-font
