kubernetes/apps/talos1018/home-automation/esphome/app/service.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: v1
kind: Service
metadata:
  name: esphome-http
  labels:
    app.kubernetes.io/name: esphome
spec:
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
  ports:
    - port: 6052
      targetPort: 6052
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: esphome
