kubernetes/apps/talos1018/home-automation/esphome/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: esphome
    gethomepage.dev/name: ESPHome
    gethomepage.dev/app: esphome
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: https-internal
  hostnames:
    - "esphome.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000
      backendRefs:
        - name: esphome-http
          port: 6052
