kubernetes/apps/talos1018/home-automation/esphome/app/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/kubernetes
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-esphome
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Smart Home
    gethomepage.dev/icon: sh-esphome.svg
    gethomepage.dev/name: ESPHome
    gethomepage.dev/app: esphome
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - esphome.${CLUSTER_DOMAIN}
      secretName: esphome-tls
  rules:
    - host: esphome.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: esphome-http
                port:
                  number: 6052
